# pretix-reluctant-stripe

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
pretix_reluctant_stripe/: __init__.py  apps.py  payment.py  signals.py
pretix_reluctant_stripe/locale/de/LC_MESSAGES/: django.po
pretix_reluctant_stripe/locale/de_Informal/LC_MESSAGES/: django.po
pretix_reluctant_stripe/static/pretix_reluctant_stripe/: stripe-reluctant.js
pretix_reluctant_stripe/templates/pretix_reluctant_stripe/: checkout_payment_form.html  presale_head.html
